# reserva-salas-uni

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
api-docs/: index.html
app/: main.py
app/api/v1/: auth_api.py  bloco_api.py  relatorio_api.py  reserva_api.py  sala_api.py  semestre_api.py  usuario_api.py
app/clients/: email_client.py
app/core/: __init__.py
app/core/commons/: __init__.py  exceptions.py  pagination.py  responses.py
app/core/config/: logging.py  settings.py
app/core/database/: database.py
app/core/di/: container.py
app/core/middleware/: logging.py
app/core/security/: auth.py  auth_dependencies.py  jwt.py
app/model/: __init__.py  auditoria_model.py  base_model.py  bloco_model.py  reserva_model.py  reserva_recorrente_model.py  sala_model.py  semestre_model.py  usuario_model.py
app/repository/: __init__.py  auditoria_repository.py  base_repository.py  bloco_repository.py  reserva_recorrente_repository.py  reserva_repository.py  sala_repository.py  semestre_repository.py  usuario_repository.py
app/schema/: auth_schema.py  bloco_schema.py  relatorio_schema.py  reserva_schema.py  sala_schema.py  semestre_schema.py  usuario_schema.py
app/services/: __init__.py  auditoria_service.py  auth_service.py  base_service.py  bloco_service.py  email_service.py  notificacao_service.py  relatorio_service.py  reports_service.py  reserva_recorrente_job.py  reserva_recorrente_service.py  reserva_service.py  sala_service.py  scheduler_service.py  semestre_service.py  usuario_service.py
app/util/: datetime_utils.py  json_utils.py
doc/: index.html  openapi.yaml
docs/: openapi.yaml
migrations/: env.py
migrations/versions/: 05d539418c58_initial_tables.py
scripts/: migrate_to_poetry.sh
tests/: conftest.py
tests/unit/: __init__.py
tests/unit/api/: __init__.py  test_reserva_api.py  test_reserva_recorrente_api.py
tests/unit/repositories/: __init__.py  test_reserva_recorrente_repository.py  test_reserva_repository.py
tests/unit/services/: __init__.py  test_reserva_recorrente_service.py  test_reserva_service.py
