[tool.poetry]
name = "reserva-salas-uni"
version = "0.1.0"
description = "Sistema de reserva de salas para universidade"
authors = ["João <jv18.victor@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
sqlalchemy = "^2.0.23"
sqlmodel = "^0.0.14"
pydantic = "^2.5.2"
pydantic-settings = "^2.1.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
loguru = "^0.7.2"
apscheduler = "^3.10.4"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
dependency-injector = "^4.41.0"
holidays = "^0.69"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
httpx = "^0.25.2"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3 