[tool.poetry]
name = "reserva-salas-uni"
version = "0.1.0"
description = ""
authors = ["Joao Santos <jv18.victor@gmail.com>"]
readme = "README.md"
packages = [
    { include = "app" }
]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastapi = {extras = ["standard"], version = "^0.115.12"}
uvicorn = ">=0.34.0,<0.35.0"
sqlalchemy = ">=2.0.39,<3.0.0"
sqlmodel = ">=0.0.24,<0.0.25"
pydantic = ">=2.10.6,<3.0.0"
pydantic-settings = ">=2.8.1,<3.0.0"
python-jose = ">=3.4.0,<4.0.0"
passlib = {extras = ["bcrypt"], version = ">=1.7.4,<2.0.0"}
python-multipart = ">=0.0.20,<0.0.21"
loguru = ">=0.7.3,<0.8.0"
apscheduler = ">=3.11.0,<4.0.0"
requests = ">=2.32.3,<3.0.0"
python-dotenv = ">=1.1.0,<2.0.0"
dependency-injector = ">=4.46.0,<5.0.0"
holidays = ">=0.69,<0.70"
psycopg-binary = "^3.2.6"
psycopg2 = "^2.9.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
httpx = "^0.28.1"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.1.2"
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

